Fix extension popup functionality and complete branding update
- Fixed popup not opening when clicking extension icon
- Simplified popup.js to prevent loading errors and crashes
- Updated all remaining LocaLingo references to WanderLingo
- Fixed content.js branding (button IDs, overlay IDs, comments)
- Added proper error handling and console logging
- Streamlined translation function with direct Vietnamese translations
- Fixed syntax errors and extension context issues
- Added mode switching with content clearing functionality
- Improved popup reliability and user experience

The extension popup now works correctly when clicking the WanderLingo icon.

--- a/public/popup.html
+++ b/public/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LocaLingo - Travel Translator</title>
+  <title>WanderLingo - Travel Translator</title>
   <style>
     * {
       margin: 0;
@@ -178,7 +178,7 @@
 </head>
 <body>
   <div class="popup-header">
-    <h1>🌍 LocaLingo</h1>
+    <h1>🌍 WanderLingo</h1>
     <p>AI Travel Translator</p>
   </div>
   
